# factorio-cpu

./: Architecture.md  FactorioCheatSheet.md  MicroArchitecture.md
.github/workflows/: rust.yml
assembler/: Cargo.toml  build.rs
assembler/src/: assembler.rs  ir.rs  lib.rs  main.rs
assembler/tests/: common.rs  example_test.rs  generated_tests.rs
assembler/tests/data/: 16_cmp_reg_imm.asm  26_cmp_reg_reg.asm  mov.asm
assembler/tests/data/arithmetic/: 10_add_reg_imm.asm  11_sub_reg_imm.asm  12_mul_reg_imm.asm  13_div_reg_imm.asm  14_mod_reg_imm.asm  15_pow_reg_imm.asm  20_add_reg_reg.asm  21_sub_reg_reg.asm  22_mul_reg_reg.asm  23_div_reg_reg.asm  24_mod_reg_reg.asm  25_pow_reg_reg.asm
assembler/tests/data/bit_operations/: 1a_and_reg_imm.asm  1b_or_reg_imm.asm  1c_xor_reg_imm.asm  1d_shl_reg_imm.asm  1e_shr_reg_imm.asm  1f_not_reg_imm.asm  2a_and_reg_reg.asm  2b_or_reg_reg.asm  2c_xor_reg_reg.asm  2d_shl_reg_reg.asm  2e_shr_reg_reg.asm
assembler/tests/data/call/: 70_call_label.asm  72_int_reg.asm
assembler/tests/data/jump/: 50_jmp_label_01.asm  50_jmp_label_02.asm  51_jz_label.asm  52_jnz_label.asm  53_js_label.asm  54_jns_label.asm  55_jle_label.asm  56_jgt_label.asm
assembler/tests/data/mov/: 01_mov_reg_imm.asm  02_mov_reg_reg.asm  03_mov_reg_[imm].asm  04_mov_reg_[reg].asm  05_mov_[imm]_imm.asm  06_mov_[reg]_imm.asm  07_mov_[imm]_reg.asm  08_mov_[reg]_reg.asm
assembler/tests/data/stack/: 60_push_imm.asm  61_push_reg.asm  62_pop_reg.asm
assembler/tests/templates/: assemble_test.trs
