[package]
name = "assembler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "factorio-cpu-assembler"
path = "src/main.rs"

[dependencies]
clap = "3.0.10"

[dev-dependencies]
colored = "2"

[build-dependencies]
glob = "0.3.0"
